# Ocellum

./: .gitignore  ARCHITECTURE.md  DECISIONS-NEEDED.md  OCELLUM-BRIEF.md  PROGRESS.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/chameleon/: character.json
scripts/: gate-m0.ps1  gate-m1.ps1  gate-m2.ps1  gate-m3.ps1  gate-m4.ps1  slice-character.py
src/: behaviour.test.ts  behaviour.ts  character.test.ts  character.ts  main.ts  mood.test.ts  mood.ts  renderer.test.ts  renderer.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  db.rs  leads.rs  lib.rs  main.rs  mood.rs  prompt.rs  providers.rs
