[package]
name = "ocellum"
version = "0.1.0"
description = "Desktop companion for individual salespeople"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "ocellum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rusqlite = { version = "0.40", features = ["bundled"] }
keyring = "4"
reqwest = { version = "0.13", features = ["blocking", "json"] }
chrono = "0.4"
tauri-plugin-clipboard-manager = "2.3.2"
